add correlation_id functionality to template

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,12 +17,8 @@ hbc.banner=${HBC_BANNER}
 webservices {
   toggles {
     url="http://hd1dtgl01lx.saksdirect.com:9880/toggle-service/toggles"
+    url = ${?TOGGLES_URL}
   }
-}
-
-akka {
-  loglevel="INFO"
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
 }
 
 statsd {
@@ -32,9 +28,29 @@ statsd {
   metric-namespace="hbc-microservice-template"
 }
 
+play.modules {
+  enabled += "modules.CorrelationIdWSClientProvider"
+  enabled += "modules.FilterProvider"
+  enabled += "modules.TogglesClientProvider"
+}
+
+
 include "default-template-config.conf"
 
 # Template Version
 template-version="v1.0.36"
 # Template Git Head Commit Hash
 template-commit-hash="000ef8e"
+
+# Initializes the filter chain
+play.http.filters=filters.ServiceFilters
+
+akka {
+  loglevel="INFO"
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  actor {
+    default-dispatcher = {
+      type = "monitoring.MDCPropagatingDispatcherConfigurator"
+    }
+  }
+}
