refactoring of common .conf properties to conf template

--- a/conf/default-template-config.conf
+++ b/conf/default-template-config.conf
@@ -3,6 +3,7 @@
 
 play {
   modules {
+    enabled += "modules.CorrelationIdWSClientProvider"
     enabled += "modules.FilterProvider"
     enabled += "modules.StatsDProvider"
     enabled += "modules.ControllerTimeoutProvider"
@@ -33,3 +34,17 @@ hbc.messages.path="messages"
 
 # Controller Timeout
 controllers.timeout=10000
+
+
+# Initializes the filter chain
+play.http.filters=filters.ServiceFilters
+
+akka {
+  loglevel="INFO"
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  actor {
+    default-dispatcher = {
+      type = "monitoring.MDCPropagatingDispatcherConfigurator"
+    }
+  }
+}
