--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,7 +10,7 @@
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
 application.secret="v7]yr6Mj^04k5]C_Eo`/YGHViwD<v9hfTcFWU1Dv_klxa=D;_R/B5@xm;XQGpBXR"
 
-# Used for banner-specific messages. See hbc-microservice-template's readme for details.
+# Used for banner-specific messages. See hello-world-service's readme for details.
 hbc.banner=${HBC_BANNER}
 
 # web services we need for most/all microservices
@@ -25,7 +25,7 @@ statsd {
   server="qa-graphitelt.digital.hbc.com"
   port=8125
   metric-host="dev-workstation"
-  metric-namespace="hbc-microservice-template"
+  metric-namespace="hello-world-service"
 }
 
 include "default-template-config.conf"
